@@ -2139,8 +2139,7 @@ ACTUAL-MODEL is the model being used instead."
                                      (propertize (format "♁%d " (ollama-buddy-web-search-count))
                                                  'face '(:weight bold))
                                    ""))
-           (rag-indicator (if (and (featurep 'ollama-buddy-rag)
-                                   (fboundp 'ollama-buddy-rag-count)
+           (rag-indicator (if (and (fboundp 'ollama-buddy-rag-count)
                                    (> (ollama-buddy-rag-count) 0))
                               (propertize (format "⊕%d " (ollama-buddy-rag-count))
                                           'face '(:weight bold))
